<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="462dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	android:paddingBottom="@dimen/activity_vertical_margin" >

        <ImageView
            android:id="@+id/ivFreeThree"
            android:layout_width="@dimen/ability_size"
            android:layout_height="@dimen/ability_size"
            android:layout_alignBottom="@+id/tvPassiveText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:minHeight="@dimen/ability_size"
            android:minWidth="@dimen/ability_size"
            android:src="@drawable/essence_theft" />

        <TextView
            android:id="@+id/tvPassiveName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/ability_padding"
            android:layout_toRightOf="@+id/ivFreeThree"
            android:text="Essence Theft"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/ability_title" />

        <TextView
            android:id="@+id/tvPassiveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvPassiveName"
            android:layout_below="@+id/tvPassiveName"
            android:text="@string/EssenceTheft"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/ability_text" />

        <TextView
            android:id="@+id/tvQText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvQName"
            android:layout_below="@+id/tvQName"
            android:text="@string/OrbOfDeception"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/ability_text" />

        <TextView
            android:id="@+id/tvWText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvWName"
            android:layout_below="@+id/tvWName"
            android:text="@string/FoxFire"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/ability_text" />

        <TextView
            android:id="@+id/tvEText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvEName"
            android:layout_below="@+id/tvEName"
            android:text="@string/Charm"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/ability_text" />

        <TextView
            android:id="@+id/tvRText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvRName"
            android:layout_below="@+id/tvRName"
            android:layout_marginBottom="15dp"
            android:text="@string/SpiritRush"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/ability_text" />

        <TextView
            android:id="@+id/tvEName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvWText"
            android:layout_below="@+id/tvWText"
            android:layout_marginTop="15dp"
            android:text="Charm"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/ability_title" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/ability_size"
            android:layout_height="@dimen/ability_size"
            android:layout_alignBottom="@+id/tvEText"
            android:layout_alignTop="@+id/tvEName"
            android:layout_toLeftOf="@+id/tvPassiveName"
            android:minHeight="@dimen/ability_size"
            android:minWidth="@dimen/ability_size"
            android:src="@drawable/charm" />

        <ImageView
            android:id="@+id/ivBaron"
            android:layout_width="@dimen/ability_size"
            android:layout_height="@dimen/ability_size"
            android:layout_alignBottom="@+id/tvWText"
            android:layout_below="@+id/tvQText"
            android:layout_marginTop="15dp"
            android:layout_toLeftOf="@+id/tvPassiveName"
            android:minHeight="@dimen/ability_size"
            android:minWidth="@dimen/ability_size"
            android:src="@drawable/foxfire" />

        <TextView
            android:id="@+id/tvQName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvPassiveText"
            android:layout_below="@+id/tvPassiveText"
            android:layout_marginTop="15dp"
            android:text="Orb Of Deception"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/ability_title" />

        <ImageView
            android:id="@+id/ivFreeTwo"
            android:layout_width="@dimen/ability_size"
            android:layout_height="@dimen/ability_size"
            android:layout_alignBottom="@+id/tvQText"
            android:layout_alignTop="@+id/tvQName"
            android:layout_toLeftOf="@+id/tvPassiveName"
            android:minHeight="@dimen/ability_size"
            android:minWidth="@dimen/ability_size"
            android:src="@drawable/orb_of_deception" />

        <TextView
            android:id="@+id/tvWName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvQText"
            android:layout_below="@+id/tvQText"
            android:layout_marginTop="15dp"
            android:text="Fox-Fire"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/ability_title" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/ability_size"
            android:layout_height="@dimen/ability_size"
            android:layout_alignBottom="@+id/tvRText"
            android:layout_below="@+id/tvEText"
            android:layout_marginTop="15dp"
            android:layout_toLeftOf="@+id/tvPassiveName"
            android:minHeight="@dimen/ability_size"
            android:minWidth="@dimen/ability_size"
            android:src="@drawable/spirit_rush" />

        <TextView
            android:id="@+id/tvRName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvEText"
            android:layout_below="@+id/tvEText"
            android:layout_marginTop="15dp"
            android:text="Spirit Rush"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/ability_title" />

    </RelativeLayout>

</ScrollView>